fixed hover sizing on smaller screens

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -166,6 +166,13 @@ progress::-webkit-progress-value {
     flex-direction: column;
     align-items: center;
   }
+
+  .home-project-card:hover {
+    height: 614px;
+    width: 402px;
+    box-shadow: 0 0 20px #951019;
+    transition: all .5s ease;
+  }
 }
 
 @media screen and (min-width: 1350px) and (max-width: 1700px) {
